Put in 'material-ui' in package.json and modified BoardList model in database.js and schema

--- a/src/frontend/index.template.html
+++ b/src/frontend/index.template.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>{%=o.htmlWebpackPlugin.options.title || 'Skele' %}</title>
+    <title>{%=o.htmlWebpackPlugin.options.title || 'Engine' %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
   </head>
   <body>
   </body>
