Added new Gulp task to copy image assets to public folder.

--- a/src/frontend/index.template.html
+++ b/src/frontend/index.template.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
-    <link rel="icon" href="/fav_icon.png?v=1" type="image/png">
+    <link rel="icon" href="/img/fav_icon.png?v=1" type="image/png">
   </head>
   <body>
   </body>
