Added Board page with FlexBox columns, Card react component with initial styles. No card data retrieval yet.

--- a/src/frontend/index.template.html
+++ b/src/frontend/index.template.html
@@ -4,7 +4,8 @@
     <title>{%=o.htmlWebpackPlugin.options.title || 'Engine' %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500, 100' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" href="/img/fav_icon.png?v=1" type="image/png">
   </head>
   <body>
