--- a/src/frontend/index.template.html
+++ b/src/frontend/index.template.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500, 100' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="icon" href="/img/fav_icon.png?v=1" type="image/png">
+    <link rel="icon" href="/img/favicon.png?v=1" type="image/png">
   </head>
   <body>
   </body>
